--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-board",
   "version": "0.1.0",
-  "homepage": "https://sst123456.github.io/strategywerks",
+  "homepage": "https://tanzeel741.github.io/todo-board",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
